--- a/Notebook/Risk fundamentals analysis .ipynb
+++ b/Notebook/Risk fundamentals analysis .ipynb
@@ -41,7 +41,14 @@
     "    \n",
     "- [3)](#3) Third component of risk: Beta \n",
     "    - [3.1)](#3.1) Historical market betas: use of regression analysis across time series.\n",
-    "    - [3.2)](#3.2) Bottom-up Beta: use of fundamentals"
+    "    - [3.2)](#3.2) Bottom-up Beta: use of fundamentals\n",
+    "    \n",
+    "- [4)](#4) From cost of equity to cost of capital \n",
+    "    - [4.1)](#4.1) Cost of debt according to firm ratings \n",
+    "    - [4.2)](#4.2) Cost of debt net of taxes: marginal tax rate vs effective tax rate. \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -2530,7 +2537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approximately a 7.017%. "
+    "Approximately a 7.017%. (Against a 10% from latest updates of Damodaran, it makes sense, we did not consider Coronavirus outbreak) "
    ]
   },
   {
@@ -5205,6 +5212,102 @@
     "**Bottom-up beta work-around** \n",
     "\n",
     "1) Identify the business which A2A operates in: we will make our assumptions according to latest consolidated balance sheet [(sec. Business Units pag.50)](http://www.1info.it/PORTALE1INFO/Pdf/Pdf?pdf=86208_oneinfo&data=2020&filetype=documenti&titolo=). \n",
+    "\n",
+    "2) Use sectors average betas: [from Damodaran's database](http://pages.stern.nyu.edu/~adamodar/) we can find useful proxies in order to compute a better Bottom up Beta. **Notice** due to the fact the unlevered beta obtained for a business may be affected by cash holdings of firms in the comparable firms' list we will use the adjusted version for cash. \n",
+    "\n",
+    "3) Unlevered beta of the specific firm: weighted average of the unlevered betas of business it operates in with weights the proportion of firm value derived from each business (we will refer to revenues for every business units). This operation yields to the bottom-up unlevered beta. \n",
+    "\n",
+    "4) According to the current debt to equity ratio for the firm (using market values if available) we can estimate the levered beta for the firm. \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bottom-up levered beta computation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assumptions: \n",
+    "\n",
+    "- According to latest discloses most of A2A's results came from: Generation and Trading (inter-sector), Market, Waste and Networks. \n",
+    "\n",
+    "- We make some assumptions with respect each of thre main business units in which we localize 5 main industries: Asset management, Green and renewable energies, environment and waste, utilities (general and water) and gas distribution.\n",
+    "The assumptions are the following: we consider 25 % of all energy from renewable production, we consider revenues values less inter-contribution and associate respectively Generation and Trading to asset management, Waste to waste sector and divide revenues from Market and Networks among remaining industries (25% of energy production is devoted to renewable sector). \n",
+    "\n",
+    "Anyway, given this strictly assumptions we get, probably, an inconsistent result [See Bottom up beta in Simone's part excel worksheet]. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) From cost of equity to cost of capital <a name=\"4\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most businesses finance some of their operations using debt or hybrids. The cost of these sources are different from cost of equity. \n",
+    "\n",
+    "Cost of capital is the weighted average of the costs of the different components of financing (equity, equity equivalents, debt and debt equivalents). \n",
+    "\n",
+    "**WACC APPROACH** \n",
+    "\n",
+    "We will follow the most widely used approach which involves estimating both costs and taking their weighted average in order to comput the cost of capital of the firm. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cost of debt according to firm ratings <a name = \"4.1\"></a> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cost of debt measures the current cost to the firm of borrowing funds for financing its assets. \n",
+    "We consider it as a function of default risk that lenders perceive in the firm. \n",
+    "\n",
+    "**Default risk models**\n",
+    "\n",
+    "Models of default risk measure the consequences of firm specific _default risk_ , function of the following variables: \n",
+    "\n",
+    "- firm's capacity to generate cash flows from operations \n",
+    "\n",
+    "- its financial oblication, including interest and principal payments\n",
+    "\n",
+    "- volatility in its cash flows: the most stability there is in cash flows the lower default risk in the firm. \n",
+    "\n",
+    "\n",
+    "**Measuring default risk** \n",
+    "\n",
+    "The most widely used measure of a firm's default risk is its bond rating assigned by ratings agency (i.g. S&P). \n",
+    "\n",
+    "To be consistent with previous analysis we will use S&P rating for A2A which is given by BBB (categorized as investment grade). \n",
     "\n"
    ]
   }
