--- a/Notebook/Risk fundamentals analysis .ipynb
+++ b/Notebook/Risk fundamentals analysis .ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5241,7 +5241,7 @@
     "- We make some assumptions with respect each of thre main business units in which we localize 5 main industries: Asset management, Green and renewable energies, environment and waste, utilities (general and water) and gas distribution.\n",
     "The assumptions are the following: we consider 25 % of all energy from renewable production, we consider revenues values less inter-contribution and associate respectively Generation and Trading to asset management, Waste to waste sector and divide revenues from Market and Networks among remaining industries (25% of energy production is devoted to renewable sector). \n",
     "\n",
-    "Anyway, given this strictly assumptions we get, probably, an inconsistent result [See Bottom up beta in Simone's part excel worksheet]. \n"
+    "Anyway, given this strictly assumptions we get, probably, an inconsistent result [See Bottom up beta in Simone's part excel worksheet](#https://github.com/simonelucchesi/Corporate-project-/blob/master/Project/Work%20in%20progress/Simone's%20part.xlsx).  \n"
    ]
   },
   {
