--- a/Notebook/Tools for firm analysis.ipynb
+++ b/Notebook/Tools for firm analysis.ipynb
@@ -39,11 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
+    "from scipy import stats\n",
     "import pandas as pd \n",
     "import os \n",
     "import matplotlib.pyplot as plt \n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
