--- a/Notebook/Risk fundamentals analysis .ipynb
+++ b/Notebook/Risk fundamentals analysis .ipynb
@@ -45,9 +45,9 @@
     "    \n",
     "- [4)](#4) From cost of equity to cost of capital \n",
     "    - [4.1)](#4.1) Cost of debt according to firm ratings \n",
-    "    - [4.2)](#4.2) Cost of debt net of taxes: marginal tax rate vs effective tax rate. \n",
+    "    - [4.2)](#4.2) A2A bond's yield to maturity: a relevant indicator of its cost of debt. \n",
     "    \n",
-    "    \n",
+    "    - [4.3)](#4.3) Cost of debt net of taxes: marginal tax rate vs effective tax rate.\n",
     "    "
    ]
   },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5307,8 +5307,244 @@
     "\n",
     "The most widely used measure of a firm's default risk is its bond rating assigned by ratings agency (i.g. S&P). \n",
     "\n",
-    "To be consistent with previous analysis we will use S&P rating for A2A which is given by BBB (categorized as investment grade). \n",
-    "\n"
+    "To be consistent with previous analysis should be used S&P rating for A2A which is given by BBB (categorized as investment grade). \n",
+    "\n",
+    "Relating to this one we should consider as proper default spread the spread between risk free rate (computed over german bunds) and a BBB financial entity such as 10 Y BTP: in this case we would have the following result:\n",
+    "\n",
+    "Cost of debt for A2A = risk free rate + CDS (10Y Btp spread against 10Y bund). \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A2A bond's yield to maturity, a relevant indicator for cost of debt <a name=\"4.2\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anyway, due to the fact A2A has bond issues on the market we could use as a indicator for its cost of debt the current yield to maturity for that asset. \n",
+    "\n",
+    "A2A in latest years have issued several 10 years duration bonds with different gross yield to maturity: the main outstanding ones are the [following](#https://www.a2a.eu/it/investitori/debito): \n",
+    "\n",
+    "1) Euro Bond 2022: yield to maturity (gross) 3,688%, maturity: 13/01/2022, yearly coupon (next: 13/01/21) \n",
+    "\n",
+    "2) Euro Bond 2025: yield to maturity 1,836%, maturity: 25/02/25, yearly coupon (next: 25/02/21) \n",
+    "\n",
+    "3) Euro Bond 2027: yield to maturity 1,768%, maturity: 19/10/27, yearly coupon (next: 19/10/20)\n",
+    "\n",
+    "4) Euro Green Bond 2029: yield to maturity 1,139%, maturity: 16/07/2029, yearlu coupon (next: 16/07/20)- \n",
+    "\n",
+    "As we can see the trend is oriented to reduce them, a proper idea could be compute a sort of average yield to maturity return using as bases the outstanding amount of debt and residual time to maturity for each one. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try to compute it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sy "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data={\"ytm\":[0.03688, 0.01836, 0.01768,0.0139],\n",
+    "                           \"resCoup\":[2,5,8,10],\n",
+    "                     \"Outstanding bonds\": [500,300,300,400]},\n",
+    "                     index = [\"Bond2022\",\"Bond2025\",\"bond2027\",\"bond2029\"]) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ytm</th>\n",
+       "      <th>resCoup</th>\n",
+       "      <th>Outstanding bonds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Bond2022</td>\n",
+       "      <td>0.03688</td>\n",
+       "      <td>2</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Bond2025</td>\n",
+       "      <td>0.01836</td>\n",
+       "      <td>5</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>bond2027</td>\n",
+       "      <td>0.01768</td>\n",
+       "      <td>8</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>bond2029</td>\n",
+       "      <td>0.01390</td>\n",
+       "      <td>10</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ytm  resCoup  Outstanding bonds\n",
+       "Bond2022  0.03688        2                500\n",
+       "Bond2025  0.01836        5                300\n",
+       "bond2027  0.01768        8                300\n",
+       "bond2029  0.01390       10                400"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataPath = \"../Project\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filePath = os.path.join(dataPath,\"a2aDebt.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(filePath,sheet_name=\"a2aDebt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = df[\"ytm\"]*df[\"resCoup\"]*df[\"Outstanding bonds\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bond2022    36.880\n",
+       "Bond2025    27.540\n",
+       "bond2027    42.432\n",
+       "bond2029    55.600\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totalDen = (df[\"Outstanding bonds\"]*df[\"resCoup\"]).sum()\n",
+    "totalNum = weights.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.018253033707865168\n"
+     ]
+    }
+   ],
+   "source": [
+    "avgCostOfDebt = totalNum/totalDen\n",
+    "print(avgCostOfDebt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This could be a consistent result for our purposes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3) Cost of debt net of marginal taxes <a name=\"4.3\"></a>"
    ]
   }
  ],
